Brought back the treasure-hunt component. Updated the for loop inside the template. I also found a better way to use the @for loop to loop through objects that are not unique

--- a/src/app/coding-challenges/coding-challenges.component.html
+++ b/src/app/coding-challenges/coding-challenges.component.html
@@ -18,7 +18,7 @@
   <mat-card class="display-card" appearance="outlined">
     <crossword></crossword>
   </mat-card>
-  <!--<mat-card class=" display-card treasure-hunt-card" appearance="outlined">
-    <app-treasure-hunt title="Treasure Hunt"></app-treasure-hunt>
-  </mat-card>-->
+  <mat-card class="display-card treasure-hunt-card" appearance="outlined">
+    <app-treasure-hunt></app-treasure-hunt>
+  </mat-card>
 </div>
