--- a/src/app/coding-challenges/treasure-hunt/treasure-hunt.component.html
+++ b/src/app/coding-challenges/treasure-hunt/treasure-hunt.component.html
@@ -15,11 +15,11 @@
             @if (terrain !== '-') {
             <img src="./assets/treasure-hunt/{{terrain}}" alt="{{terrain}}" height="60px" width="60px">
             }
-            @else if ((i === 2 && j === 2) && player != undefined) {
-            <img class="player" src="{{getPlayerImg()}}" alt="{{getPlayerImg()}}" height="60px" width="60px">
-            }
             @else {
-            <img src="{{getDefaultImage()}}" height="60px" width="60px">
+            <img src="{{defaultImage}}" height="60px" width="60px">
+            }
+            @if ((i === 2 && j === 2) && player !== undefined) {
+            <img class="player" src="{{playerImage}}" alt="{{playerImage}}" height="60px" width="60px">
             }
           </div>
           }
