Fixed some layout issues for the treasure hunt component. I also added auto scrolling to bottom when the text area gets filled.

--- a/src/app/coding-challenges/treasure-hunt/treasure-hunt.component.html
+++ b/src/app/coding-challenges/treasure-hunt/treasure-hunt.component.html
@@ -2,32 +2,28 @@
   <nav>
     <button (click)="restart()">Restart</button>
   </nav>
-  <div>
-    <main>
-      <textarea name="console" id="" cols="40" rows="14" readonly [(ngModel)]="gameConsole.textArea"></textarea>
-    </main>
-    <div>
-      <div id="map-border">
-        @for (row of miniMap; track $index; let i = $index) {
-        <aside>
-          @for (terrain of row; track $index; let j = $index) {
-          <div>
-            @if (terrain !== '-') {
-            <img src="./assets/treasure-hunt/{{terrain}}" alt="{{terrain}}" height="60px" width="60px">
-            }
-            @else {
-            <img src="{{defaultImage}}" height="60px" width="60px">
-            }
-            @if ((i === 2 && j === 2) && player !== undefined) {
-            <img class="player" src="{{playerImage}}" alt="{{playerImage}}" height="60px" width="60px">
-            }
-          </div>
+  <main>
+    <textarea #textarea name="console" id="" cols="40" rows="14" readonly [(ngModel)]="gameConsole.textArea"></textarea>
+    <div id="map-border">
+      @for (row of miniMap; track $index; let i = $index) {
+      <aside>
+        @for (terrain of row; track $index; let j = $index) {
+        <div>
+          @if (terrain !== '-') {
+          <img src="./assets/treasure-hunt/{{terrain}}" alt="{{terrain}}" height="60px" width="60px">
           }
-        </aside>
+          @else {
+          <img src="{{defaultImage}}" height="60px" width="60px">
+          }
+          @if ((i === 2 && j === 2) && player !== undefined) {
+          <img class="player" src="{{playerImage}}" alt="{{playerImage}}" height="60px" width="60px">
+          }
+        </div>
         }
-      </div>
+      </aside>
+      }
     </div>
-  </div>
+  </main>
   <section>
     <label for="commands">Command Input</label>&nbsp;
     <input name="commands" type="text" #command>&nbsp;
